--- a/Scss/style.css
+++ b/Scss/style.css
@@ -225,9 +225,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   border: 1px solid #f7cf43;
   border-radius: 100%;
   width: 40px;
@@ -356,18 +356,12 @@
   margin-top: 8vh;
 }
 
-#contact-app .contact-content_item {
-  padding-left: 24vh;
-}
-
 #contact-app .contact-header_box {
   margin-top: 2vh;
 }
 
 #contact-app footer {
-  position: absolute;
-  bottom: 10%;
-  width: 80%;
+  margin-top: 30px;
 }
 
 #contact-app .soc i {
