--- a/Scss/_about-project.scss
+++ b/Scss/_about-project.scss
@@ -1,8 +1,3 @@
-/* გვაქ ორი სახის იკონკები 
-პირველი ---- მრგვალი
-მეორე --- მხოლოდ ლოგო
-ასევე იკონკების ზომები შეგიძლიათ ცვალოთ font-size-ით; ფერი - color-ით
-*/
 .about {
   overflow-x: hidden;
   .container {
@@ -23,73 +18,58 @@
     margin-top: 2vh;
   }
   .nav-item {
-    margin-left: 80px;
-    color: #c5cbcd;
-    font-size: 2.2vh;
-    font-family: "ALK Sanet";
+    position: relative;
+    margin-left:80px;
+    a {
+      color: #C5CBCD;
+      font-size: 16px;
+      font-family: "ALK Sanet Regular";
+    }
+  }
+  .nav-link {
+    padding-right: 0rem !important;
+    padding-left: 0rem !important;
+    padding-bottom: 0 !important;
+    
+  }
+
+  .nav-link .active:after {
+    position: absolute;
+    content: "";
+    height: 2px;
+    bottom: -8px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: #f7cf43;
+  }
+  .nav-link:after {
+    position: absolute;
+    content: "";
+    height: 2px;
+    bottom: -8px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 0%;
+    background: #f7cf43;
+    transition:.5s;
+  }
+  .nav-link .active {
+    color: #7FD1D8;
+  }
+  .nav-link:hover {
+    color: #7FD1D8;
+  }
+  .nav-link:hover:after {
+    width: 100%;
+    background: orange;
   }
   .header-logo {
-    height: 6.9vh;
-    max-height: 53px;
     img {
-      height: 100%;
-    }
-  }
-
-  .card {
-    border: 1px solid rgba(127, 209, 216, 0.2);
-    box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.6);
-    border-radius: 3.1vh;
-  }
-
-  .card-title {
-    color: #7fd1d8;
-    font-size: 3.2vh;
-    font-family: "ALK Sanet";
-    padding-top: 25px;
-  }
-  .card-text {
-    color: #c5cbcd;
-    font-size: 2.4vh;
-    font-family: "Noto Sans";
-    padding-top: 10px;
-    padding-bottom: 60px;
-  }
-
-  .ladybird {
-    height: 3.2vh;
-    max-height: 25px;
-    left: 30vh;
-    img {
-      height: 100%;
-    }
-  }
-  .fly {
-    position: absolute;
-    bottom: 2vh;
-    right: 9vh;
-    height: 23vh;
-    max-height: 179px;
-    img {
-      height: 100%;
-    }
-  }
-  .footer {
-    margin-top: 5vh;
-  }
-  .soc {
-    // თუ გამოიყენებთ მომრგვალებულს მაშინ უნდა ქონდეს მშობელი ელემენტი მაგ: div.fb ან ნებისმიერი კლასი
-    // მთავარია border და border-radius ქონდეს ზომები საჭიროების მიხევით
-    .fb {
-      border-radius: 100%;
-      height: 40px;
-      width: 40px;
-      border: 1px solid #7fd1d8;
-    }
-    i {
-      color: #7fd1d8;
-      font-size: 25px;
-      margin-left: 30px;
+      width: 54.98px;
+      height: 53.44px;
     }
   }
   .user {
@@ -108,4 +88,63 @@
       transform: translate(-50%, -50%);
     }
   }
+
+  .card {
+    border: 1px solid rgba(127, 209, 216, 0.2);
+    box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.6);
+    border-radius: 3.1vh;
+  }
+
+  .card-title {
+    color: #7fd1d8;
+    font-size: 25px;
+    font-family: "ALK Sanet";
+    padding-top: 1.8vh;
+  }
+  .card-text {
+    color: #c5cbcd;
+    font-size: 2.2vh;
+    font-family: "Noto Sans";
+    padding-top: 10px;
+    padding-bottom: 60px;
+  }
+
+  .ladybird {
+    height: 3.2vh;
+    max-height: 25px;
+    left: 22vh;
+    img {
+      height: 100%;
+    }
+  }
+  .fly {
+    position: absolute;
+    bottom: 8vh;
+    right: 10vh;
+    height: 23vh;
+    max-height: 179px;
+    img {
+      height: 100%;
+    }
+  }
+  .footer {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 11vh;
+  }
+  .soc {
+    .fb {
+      border-radius: 100%;
+      height: 40px;
+      width: 40px;
+      border: 1px solid #7fd1d8;
+    }
+    i {
+      color: #7fd1d8;
+      font-size: 30px;
+      margin-left: 30px;
+    }
+  }
+
 }
