--- a/Scss/_about-project.scss
+++ b/Scss/_about-project.scss
@@ -1,150 +1,223 @@
-.about {
-  overflow-x: hidden;
-  .container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  header {
-    margin-top: 2vh;
-  }
-  .main-box_relative {
-    position: relative;
-    height: 100vh;
-  }
-  .content {
-    margin-top: 2vh;
-  }
-  .nav-item {
-    position: relative;
-    margin-left:80px;
-    a {
-      color: #C5CBCD;
-      font-size: 16px;
-      font-family: "ALK Sanet Regular";
-    }
-  }
-  .nav-link {
-    padding-right: 0rem !important;
-    padding-left: 0rem !important;
-    padding-bottom: 0 !important;
-    
-  }
+.is-menu-center{
+  margin:auto;
 
-  .nav-link .active:after {
-    position: absolute;
-    content: "";
-    height: 2px;
-    bottom: -8px;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    width: 100%;
-    background: #f7cf43;
-  }
-  .nav-link:after {
-    position: absolute;
-    content: "";
-    height: 2px;
-    bottom: -8px;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    width: 0%;
-    background: #f7cf43;
-    transition:.5s;
-  }
-  .nav-link .active {
-    color: #7FD1D8;
-  }
-  .nav-link:hover {
-    color: #7FD1D8;
-  }
-  .nav-link:hover:after {
-    width: 100%;
-    background: orange;
-  }
-  .header-logo {
-    img {
-      width: 54.98px;
-      height: 53.44px;
-    }
-  }
-  .user {
-    border-radius: 100%;
-    height: 40px;
-    width: 40px;
-    position: relative;
-    border: 1px solid #f7cf43;
+}
 
-    i {
-      color: #f7cf43;
-      font-size: 30px;
-      position: absolute;
-      top: 70%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-
-  .card {
-    border: 1px solid rgba(127, 209, 216, 0.2);
-    box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.6);
-    border-radius: 3.1vh;
-  }
-
-  .card-title {
-    color: #7fd1d8;
-    font-size: 25px;
-    font-family: "ALK Sanet";
-    padding-top: 1.8vh;
-  }
-  .card-text {
-    color: #c5cbcd;
-    font-size: 2.2vh;
-    font-family: "Noto Sans";
-    padding-top: 10px;
-    padding-bottom: 60px;
-  }
-
-  .ladybird {
-    height: 3.2vh;
-    max-height: 25px;
-    left: 22vh;
-    img {
-      height: 100%;
-    }
-  }
-  .fly {
-    position: absolute;
-    bottom: 8vh;
-    right: 10vh;
-    height: 23vh;
-    max-height: 179px;
-    img {
-      height: 100%;
-    }
-  }
-  .footer {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 11vh;
-  }
-  .soc {
-    .fb {
-      border-radius: 100%;
-      height: 40px;
-      width: 40px;
-      border: 1px solid #7fd1d8;
-    }
-    i {
-      color: #7fd1d8;
-      font-size: 30px;
-      margin-left: 30px;
-    }
+.logo{
+  img{
+    width:54px;
+    height:53px;
   }
 
 }
+.navbar-item{
+  margin-left:30px;
+}
+
+
+.is-user {
+      border-radius: 100%;
+      height: 40px;
+      width: 40px;
+      position: relative;
+      border: 1px solid #f7cf43;
+  
+      i {
+        color: #f7cf43;
+        font-size: 30px;
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    .is-card {
+          border: 1px solid rgba(127, 209, 216, 0.2);
+          box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.6);
+          border-radius: 3.1vh;
+        }
+      
+        .is-card-title {
+          color: #7fd1d8;
+          font-size: 25px;
+          padding-top: 20px;
+        }
+        .is-card-text {
+          color: #c5cbcd;
+          font-size: 2.2vh;
+          padding-top: 10px;
+          padding-bottom: 100px;
+          padding-right:20px;
+          padding-left:20px;
+        }
+
+         .is-footer {
+              position: fixed;
+              left: 0;
+              right: 0;
+              bottom: 11vh;
+            }
+            .is-soc {
+              .fb {
+                border-radius: 100%;
+                height: 40px;
+                width: 40px;
+                border: 1px solid #7fd1d8;
+              }
+              i {
+                color: #7fd1d8;
+                font-size: 30px;
+                margin-left: 30px;
+              }
+            }
+
+         .is-fly {
+                position: absolute;
+                display:flex;
+                bottom: 8vh;
+                right: 10vh;
+                height: 23vh;
+                max-height: 179px;
+                img {
+                  height: 100%;
+                }
+              }
+
+
+
+
+// .about {
+//   overflow-x: hidden;
+//   .container {
+//     width: 100%;
+//     margin-right: auto;
+//     margin-left: auto;
+//     padding-right: 15px;
+//     padding-left: 15px;
+//   }
+//   header {
+//     margin-top: 2vh;
+//   }
+//   .main-box_relative {
+//     position: relative;
+//     height: 100vh;
+//   }
+//   .content {
+//     margin-top: 2vh;
+//   }
+//   .nav-item {
+//     position: relative;
+//     margin-left:80px;
+//     a {
+//       color: #C5CBCD;
+//       font-size: 16px;
+//       font-family: "ALK Sanet Regular";
+//     }
+//   }
+//   .nav-link {
+//     padding-right: 0rem !important;
+//     padding-left: 0rem !important;
+//     padding-bottom: 0 !important;
+    
+//   }
+
+//   .nav-link .active:after {
+//     position: absolute;
+//     content: "";
+//     height: 2px;
+//     bottom: -8px;
+//     margin: 0 auto;
+//     left: 0;
+//     right: 0;
+//     width: 100%;
+//     background: #f7cf43;
+//   }
+//   .nav-link:after {
+//     position: absolute;
+//     content: "";
+//     height: 2px;
+//     bottom: -8px;
+//     margin: 0 auto;
+//     left: 0;
+//     right: 0;
+//     width: 0%;
+//     background: #f7cf43;
+//     transition:.5s;
+//   }
+//   .nav-link .active {
+//     color: #7FD1D8;
+//   }
+//   .nav-link:hover {
+//     color: #7FD1D8;
+//   }
+//   .nav-link:hover:after {
+//     width: 100%;
+//     background: orange;
+//   }
+//   .header-logo {
+//     img {
+//       width: 54.98px;
+//       height: 53.44px;
+//     }
+//   }
+//  
+//   .card {
+//     border: 1px solid rgba(127, 209, 216, 0.2);
+//     box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.6);
+//     border-radius: 3.1vh;
+//   }
+
+//   .card-title {
+//     color: #7fd1d8;
+//     font-size: 25px;
+//     font-family: "ALK Sanet";
+//     padding-top: 1.8vh;
+//   }
+//   .card-text {
+//     color: #c5cbcd;
+//     font-size: 2.2vh;
+//     font-family: "Noto Sans";
+//     padding-top: 10px;
+//     padding-bottom: 60px;
+//   }
+
+//   .ladybird {
+//     height: 3.2vh;
+//     max-height: 25px;
+//     left: 22vh;
+//     img {
+//       height: 100%;
+//     }
+//   }
+//   .fly {
+//     position: absolute;
+//     bottom: 8vh;
+//     right: 10vh;
+//     height: 23vh;
+//     max-height: 179px;
+//     img {
+//       height: 100%;
+//     }
+//   }
+//   .footer {
+//     position: fixed;
+//     left: 0;
+//     right: 0;
+//     bottom: 11vh;
+//   }
+//   .soc {
+//     .fb {
+//       border-radius: 100%;
+//       height: 40px;
+//       width: 40px;
+//       border: 1px solid #7fd1d8;
+//     }
+//     i {
+//       color: #7fd1d8;
+//       font-size: 30px;
+//       margin-left: 30px;
+//     }
+//   }
+
+// }
