--- a/Scss/style.css
+++ b/Scss/style.css
@@ -372,7 +372,7 @@ pre {
 }
 
 body {
-  color: #C5CBCD;
+  color: #c5cbcd;
   font-size: 1em;
   font-weight: 400;
   line-height: 1.5;
@@ -439,7 +439,7 @@ fieldset {
 pre {
   -webkit-overflow-scrolling: touch;
   background-color: whitesmoke;
-  color: #C5CBCD;
+  color: #c5cbcd;
   font-size: 0.875em;
   overflow-x: auto;
   padding: 1.25rem 1.5rem;
@@ -473,7 +473,7 @@ table th {
   border-radius: 6px;
   -webkit-box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
           box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: #C5CBCD;
+  color: #c5cbcd;
   display: block;
   padding: 1.25rem;
 }
@@ -552,7 +552,7 @@ a.box:active {
 .button.is-text {
   background-color: transparent;
   border-color: transparent;
-  color: #C5CBCD;
+  color: #c5cbcd;
   text-decoration: underline;
 }
 
@@ -1019,7 +1019,7 @@ fieldset[disabled] .button.is-dark.is-inverted.is-outlined {
 }
 
 .button.is-primary {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
@@ -1048,7 +1048,7 @@ fieldset[disabled] .button.is-dark.is-inverted.is-outlined {
 
 .button.is-primary[disabled],
 fieldset[disabled] .button.is-primary {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   border-color: transparent;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -1056,7 +1056,7 @@ fieldset[disabled] .button.is-primary {
 
 .button.is-primary.is-inverted {
   background-color: rgba(0, 0, 0, 0.7);
-  color: #7FD1D8;
+  color: #7fd1d8;
 }
 
 .button.is-primary.is-inverted:hover, .button.is-primary.is-inverted.is-hovered {
@@ -1069,7 +1069,7 @@ fieldset[disabled] .button.is-primary.is-inverted {
   border-color: transparent;
   -webkit-box-shadow: none;
           box-shadow: none;
-  color: #7FD1D8;
+  color: #7fd1d8;
 }
 
 .button.is-primary.is-loading::after {
@@ -1078,18 +1078,18 @@ fieldset[disabled] .button.is-primary.is-inverted {
 
 .button.is-primary.is-outlined {
   background-color: transparent;
-  border-color: #7FD1D8;
-  color: #7FD1D8;
+  border-color: #7fd1d8;
+  color: #7fd1d8;
 }
 
 .button.is-primary.is-outlined:hover, .button.is-primary.is-outlined.is-hovered, .button.is-primary.is-outlined:focus, .button.is-primary.is-outlined.is-focused {
-  background-color: #7FD1D8;
-  border-color: #7FD1D8;
+  background-color: #7fd1d8;
+  border-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary.is-outlined.is-loading::after {
-  border-color: transparent transparent #7FD1D8 #7FD1D8 !important;
+  border-color: transparent transparent #7fd1d8 #7fd1d8 !important;
 }
 
 .button.is-primary.is-outlined.is-loading:hover::after, .button.is-primary.is-outlined.is-loading.is-hovered::after, .button.is-primary.is-outlined.is-loading:focus::after, .button.is-primary.is-outlined.is-loading.is-focused::after {
@@ -1099,10 +1099,10 @@ fieldset[disabled] .button.is-primary.is-inverted {
 .button.is-primary.is-outlined[disabled],
 fieldset[disabled] .button.is-primary.is-outlined {
   background-color: transparent;
-  border-color: #7FD1D8;
+  border-color: #7fd1d8;
   -webkit-box-shadow: none;
           box-shadow: none;
-  color: #7FD1D8;
+  color: #7fd1d8;
 }
 
 .button.is-primary.is-inverted.is-outlined {
@@ -1113,11 +1113,11 @@ fieldset[disabled] .button.is-primary.is-outlined {
 
 .button.is-primary.is-inverted.is-outlined:hover, .button.is-primary.is-inverted.is-outlined.is-hovered, .button.is-primary.is-inverted.is-outlined:focus, .button.is-primary.is-inverted.is-outlined.is-focused {
   background-color: rgba(0, 0, 0, 0.7);
-  color: #7FD1D8;
+  color: #7fd1d8;
 }
 
 .button.is-primary.is-inverted.is-outlined.is-loading:hover::after, .button.is-primary.is-inverted.is-outlined.is-loading.is-hovered::after, .button.is-primary.is-inverted.is-outlined.is-loading:focus::after, .button.is-primary.is-inverted.is-outlined.is-loading.is-focused::after {
-  border-color: transparent transparent #7FD1D8 #7FD1D8 !important;
+  border-color: transparent transparent #7fd1d8 #7fd1d8 !important;
 }
 
 .button.is-primary.is-inverted.is-outlined[disabled],
@@ -2420,7 +2420,7 @@ fieldset[disabled] .button {
 }
 
 .notification.is-primary {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
@@ -2496,15 +2496,15 @@ fieldset[disabled] .button {
 }
 
 .progress::-webkit-progress-value {
-  background-color: #C5CBCD;
+  background-color: #c5cbcd;
 }
 
 .progress::-moz-progress-bar {
-  background-color: #C5CBCD;
+  background-color: #c5cbcd;
 }
 
 .progress::-ms-fill {
-  background-color: #C5CBCD;
+  background-color: #c5cbcd;
   border: none;
 }
 
@@ -2577,20 +2577,20 @@ fieldset[disabled] .button {
 }
 
 .progress.is-primary::-webkit-progress-value {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
 }
 
 .progress.is-primary::-moz-progress-bar {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
 }
 
 .progress.is-primary::-ms-fill {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
 }
 
 .progress.is-primary:indeterminate {
-  background-image: -webkit-gradient(linear, left top, right top, color-stop(30%, #7FD1D8), color-stop(30%, #ededed));
-  background-image: linear-gradient(to right, #7FD1D8 30%, #ededed 30%);
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(30%, #7fd1d8), color-stop(30%, #ededed));
+  background-image: linear-gradient(to right, #7fd1d8 30%, #ededed 30%);
 }
 
 .progress.is-link::-webkit-progress-value {
@@ -2688,8 +2688,8 @@ fieldset[disabled] .button {
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
   background-color: #ededed;
-  background-image: -webkit-gradient(linear, left top, right top, color-stop(30%, #C5CBCD), color-stop(30%, #ededed));
-  background-image: linear-gradient(to right, #C5CBCD 30%, #ededed 30%);
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(30%, #c5cbcd), color-stop(30%, #ededed));
+  background-image: linear-gradient(to right, #c5cbcd 30%, #ededed 30%);
   background-position: top left;
   background-repeat: no-repeat;
   background-size: 150% 150%;
@@ -2776,8 +2776,8 @@ fieldset[disabled] .button {
 
 .table td.is-primary,
 .table th.is-primary {
-  background-color: #7FD1D8;
-  border-color: #7FD1D8;
+  background-color: #7fd1d8;
+  border-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
@@ -2824,7 +2824,7 @@ fieldset[disabled] .button {
 
 .table td.is-selected,
 .table th.is-selected {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
@@ -2849,7 +2849,7 @@ fieldset[disabled] .button {
 }
 
 .table tr.is-selected {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
@@ -3019,7 +3019,7 @@ fieldset[disabled] .button {
           align-items: center;
   background-color: whitesmoke;
   border-radius: 4px;
-  color: #C5CBCD;
+  color: #c5cbcd;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -3060,7 +3060,7 @@ fieldset[disabled] .button {
 }
 
 .tag:not(body).is-primary {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
@@ -3268,7 +3268,7 @@ a.tag:hover {
 }
 
 .subtitle {
-  color: #C5CBCD;
+  color: #c5cbcd;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25;
@@ -3478,7 +3478,7 @@ fieldset[disabled] .select select:-ms-input-placeholder,
 }
 
 .is-primary.input, .is-primary.textarea {
-  border-color: #7FD1D8;
+  border-color: #7fd1d8;
 }
 
 .is-primary.input:focus, .is-primary.textarea:focus, .is-primary.is-focused.input, .is-primary.is-focused.textarea, .is-primary.input:active, .is-primary.textarea:active, .is-primary.is-active.input, .is-primary.is-active.textarea {
@@ -3741,11 +3741,11 @@ fieldset[disabled] .select select:hover {
 }
 
 .select.is-primary:not(:hover)::after {
-  border-color: #7FD1D8;
+  border-color: #7fd1d8;
 }
 
 .select.is-primary select {
-  border-color: #7FD1D8;
+  border-color: #7fd1d8;
 }
 
 .select.is-primary select:hover, .select.is-primary select.is-hovered {
@@ -4002,7 +4002,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .file.is-primary .file-cta {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   border-color: transparent;
   color: rgba(0, 0, 0, 0.7);
 }
@@ -4329,7 +4329,7 @@ fieldset[disabled] .select select:hover {
 
 .file-cta {
   background-color: whitesmoke;
-  color: #C5CBCD;
+  color: #c5cbcd;
 }
 
 .file-name {
@@ -4408,7 +4408,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .help.is-primary {
-  color: #7FD1D8;
+  color: #7fd1d8;
 }
 
 .help.is-link {
@@ -4677,7 +4677,7 @@ fieldset[disabled] .select select:hover {
 .control.has-icons-left .input:focus ~ .icon,
 .control.has-icons-left .select:focus ~ .icon, .control.has-icons-right .input:focus ~ .icon,
 .control.has-icons-right .select:focus ~ .icon {
-  color: #C5CBCD;
+  color: #c5cbcd;
 }
 
 .control.has-icons-left .input.is-small ~ .icon,
@@ -4861,7 +4861,7 @@ fieldset[disabled] .select select:hover {
   background-color: white;
   -webkit-box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
           box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: #C5CBCD;
+  color: #c5cbcd;
   max-width: 100%;
   position: relative;
 }
@@ -5006,7 +5006,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .dropdown-item {
-  color: #C5CBCD;
+  color: #c5cbcd;
   display: block;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -5300,7 +5300,7 @@ button.dropdown-item.is-active {
 
 .menu-list a {
   border-radius: 2px;
-  color: #C5CBCD;
+  color: #c5cbcd;
   display: block;
   padding: 0.5em 0.75em;
 }
@@ -5420,12 +5420,12 @@ button.dropdown-item.is-active {
 }
 
 .message.is-primary .message-header {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
 .message.is-primary .message-body {
-  border-color: #7FD1D8;
+  border-color: #7fd1d8;
   color: #236b71;
 }
 
@@ -5503,7 +5503,7 @@ button.dropdown-item.is-active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #C5CBCD;
+  background-color: #c5cbcd;
   border-radius: 4px 4px 0 0;
   color: rgba(0, 0, 0, 0.7);
   display: -webkit-box;
@@ -5538,7 +5538,7 @@ button.dropdown-item.is-active {
   border-radius: 4px;
   border-style: solid;
   border-width: 0 0 0 4px;
-  color: #C5CBCD;
+  color: #c5cbcd;
   padding: 1.25em 1.5em;
 }
 
@@ -5931,7 +5931,7 @@ button.dropdown-item.is-active {
 }
 
 .navbar.is-primary {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
@@ -5987,7 +5987,7 @@ button.dropdown-item.is-active {
     color: rgba(0, 0, 0, 0.7);
   }
   .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
-    background-color: #7FD1D8;
+    background-color: #7fd1d8;
     color: rgba(0, 0, 0, 0.7);
   }
 }
@@ -6373,7 +6373,7 @@ body.has-navbar-fixed-bottom {
 }
 
 .navbar-burger {
-  color: #C5CBCD;
+  color: #c5cbcd;
   cursor: pointer;
   display: block;
   height: 3.25rem;
@@ -6437,7 +6437,7 @@ body.has-navbar-fixed-bottom {
 
 .navbar-item,
 .navbar-link {
-  color: #C5CBCD;
+  color: #c5cbcd;
   display: block;
   line-height: 1.5;
   padding: 0.5rem 0.75rem;
@@ -7087,16 +7087,16 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .panel.is-primary .panel-heading {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
 .panel.is-primary .panel-tabs a.is-active {
-  border-bottom-color: #7FD1D8;
+  border-bottom-color: #7fd1d8;
 }
 
 .panel.is-primary .panel-block.is-active .panel-icon {
-  color: #7FD1D8;
+  color: #7fd1d8;
 }
 
 .panel.is-link .panel-heading {
@@ -7204,7 +7204,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .panel-list a {
-  color: #C5CBCD;
+  color: #c5cbcd;
 }
 
 .panel-list a:hover {
@@ -7308,7 +7308,7 @@ label.panel-block:hover {
   border-bottom-color: #dbdbdb;
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  color: #C5CBCD;
+  color: #c5cbcd;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9806,7 +9806,7 @@ a.has-text-dark:hover, a.has-text-dark:focus {
 }
 
 .has-text-primary {
-  color: #7FD1D8 !important;
+  color: #7fd1d8 !important;
 }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
@@ -9814,7 +9814,7 @@ a.has-text-primary:hover, a.has-text-primary:focus {
 }
 
 .has-background-primary {
-  background-color: #7FD1D8 !important;
+  background-color: #7fd1d8 !important;
 }
 
 .has-text-primary-light {
@@ -11750,7 +11750,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 
 .hero.is-primary {
-  background-color: #7FD1D8;
+  background-color: #7fd1d8;
   color: rgba(0, 0, 0, 0.7);
 }
 
@@ -11774,7 +11774,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 
 @media screen and (max-width: 1023px) {
   .hero.is-primary .navbar-menu {
-    background-color: #7FD1D8;
+    background-color: #7fd1d8;
   }
 }
 
@@ -11814,16 +11814,16 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .hero.is-primary .tabs.is-boxed li.is-active a, .hero.is-primary .tabs.is-boxed li.is-active a:hover, .hero.is-primary .tabs.is-toggle li.is-active a, .hero.is-primary .tabs.is-toggle li.is-active a:hover {
   background-color: rgba(0, 0, 0, 0.7);
   border-color: rgba(0, 0, 0, 0.7);
-  color: #7FD1D8;
+  color: #7fd1d8;
 }
 
 .hero.is-primary.is-bold {
-  background-image: linear-gradient(141deg, #4dd7cb 0%, #7FD1D8 71%, #8fcde1 100%);
+  background-image: linear-gradient(141deg, #4dd7cb 0%, #7fd1d8 71%, #8fcde1 100%);
 }
 
 @media screen and (max-width: 768px) {
   .hero.is-primary.is-bold .navbar-menu {
-    background-image: linear-gradient(141deg, #4dd7cb 0%, #7FD1D8 71%, #8fcde1 100%);
+    background-image: linear-gradient(141deg, #4dd7cb 0%, #7fd1d8 71%, #8fcde1 100%);
   }
 }
 
@@ -12592,6 +12592,15 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   margin: auto;
 }
 
+.logo img {
+  width: 54px;
+  height: 53px;
+}
+
+.navbar-item {
+  margin-left: 30px;
+}
+
 .is-user {
   border-radius: 100%;
   height: 40px;
@@ -12620,17 +12629,50 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .is-card-title {
   color: #7fd1d8;
   font-size: 25px;
-  font-family: "ALK Sanet";
   padding-top: 20px;
 }
 
 .is-card-text {
   color: #c5cbcd;
   font-size: 2.2vh;
-  font-family: "Noto Sans";
   padding-top: 10px;
   padding-bottom: 100px;
   padding-right: 20px;
   padding-left: 20px;
+}
+
+.is-footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 11vh;
+}
+
+.is-soc .fb {
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  border: 1px solid #7fd1d8;
+}
+
+.is-soc i {
+  color: #7fd1d8;
+  font-size: 30px;
+  margin-left: 30px;
+}
+
+.is-fly {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  bottom: 8vh;
+  right: 10vh;
+  height: 23vh;
+  max-height: 179px;
+}
+
+.is-fly img {
+  height: 100%;
 }
 /*# sourceMappingURL=style.css.map */
