--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -5,6 +5,7 @@ $text: #c5cbcd;
 
 $family-primary: "ALK Sanet";
 $family-secondary: "NotoSans-Regular";
+$footer-padding:3rem 1.5rem;
 
 // variable declaration
 @import "./bulma.sass";
