--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -6,6 +6,8 @@ $text: #c5cbcd;
 $family-primary: "ALK Sanet";
 $family-secondary: "NotoSans-Regular";
 
+$navbar-height: 6rem;
+
 // variable declaration
 @import "./bulma.sass";
 @import "./flaticon";
