--- a/Scss/_contact.scss
+++ b/Scss/_contact.scss
@@ -1,41 +1,95 @@
-#contact-app {
-  .header-logo {
-    img {
-      width: 54.98px;
-      height: 53.44px;
-    }
+.is-navbar {
+  margin: 0 10px;
+}
+.is-navbar-end {
+  margin: 0;
+}
+.navbar-item {
+  img {
+    max-width: 54.98px;
+    max-height: 53.44px;
   }
-  .user-item {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    border: 1px solid #f7cf43;
-    border-radius: 100%;
-    width: 40px;
-    height: 40px;
-    i {
-      color: #f7cf43;
-      font-size: 31px; 
-    }
-  }
-  .nav-item {
-    position: relative;
-    a {
-      color: #c5cbcd;
-      font-size: 16px;
-      font-family: ALK Sanet Regular;
-    }
-  }
-  .nav-link {
-    padding-right: 0rem !important;
-    padding-left: 0rem !important;
-    padding-bottom: 0 !important;
-  }
-  .nav-item {
-    margin-right: 2.5rem;
-    margin-left: 2.5rem;
-  }
-  .nav-link.active:after {
+}
+.button {
+  border-color: transparent;
+  box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+  color: #f7cf43;
+  padding-bottom: 0px;
+  padding-top: 24px;
+}
+.button.is-rounded {
+  height: 48px;
+  width: 48px;
+}
+.button:active, .button.is-active {
+  border-color: transparent;
+  color: #f7cf43;
+}
+.button:hover, .button.is-hovered {
+  border-color: transparent;
+  color: #f7cf43;
+}
+.button:focus, .button.is-focused {
+  border-color: transparent;
+  color: #f7cf43;
+}
+.button:focus:not(:active), .button.is-focused:not(:active) {
+  box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+}
+.flaticon-user:before {
+  font-size: 28px;
+}
+  // .user-item {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: flex-end;
+  //   border: 1px solid #f7cf43;
+  //   border-radius: 100%;
+  //   width: 48px;
+  //   height: 48px;
+  //   i {
+  //     color: #f7cf43;
+  //     font-size: 31px; 
+  //   }
+  // }
+// #contact-app {
+//   .header-logo {
+//     img {
+//       width: 54.98px;
+//       height: 53.44px;
+//     }
+//   }
+//   .user-item {
+//     display: flex;
+//     justify-content: center;
+//     align-items: flex-start;
+//     border: 1px solid #f7cf43;
+//     border-radius: 100%;
+//     width: 40px;
+//     height: 40px;
+//     i {
+//       color: #f7cf43;
+//       font-size: 31px; 
+//     }
+//   }
+//   .nav-item {
+//     position: relative;
+//     a {
+//       color: #c5cbcd;
+//       font-size: 16px;
+//       font-family: ALK Sanet Regular;
+//     }
+//   }
+  // .nav-link {
+  //   padding-right: 0rem !important;
+  //   padding-left: 0rem !important;
+  //   padding-bottom: 0 !important;
+  // }
+//   .nav-item {
+//     margin-right: 2.5rem;
+//     margin-left: 2.5rem;
+//   }
+  .is-navbar_line.active:after {
     position: absolute;
     content: "";
     height: 2px;
@@ -43,10 +97,10 @@
     margin: 0 auto;
     left: 0;
     right: 0;
-    width: 100%;
+    width: 80%;
     background: #f7cf43;
   }
-  .nav-link:after {
+  .is-navbar_line:after {
     position: absolute;
     content: "";
     height: 2px;
@@ -58,81 +112,125 @@
     background: #f7cf43;
     transition:.5s;
   }
-  .nav-link.active {
-    color: #7fd1d8;
+  .is-navbar_line.active {
+    color: #7fd1d8!important;
   }
-  .nav-link:hover {
-    color: #7fd1d8;
+  .is-navbar_line:hover {
+    color: #7fd1d8!important;
+    background-color: inherit!important;
   }
-  .nav-link:hover:after {
-    width: 100%;
-    background: orange;
+
+  .is-navbar_line:hover:after {
+    width: 80%;
+    background:#f7cf43;
   }
-  .card.card-item {
-    width: 76vh;
-    height: 53vh;
+  .is-navbar_line{
+    padding: 0;
+    margin: 0.5rem 0.75rem;
+  }
+
+.card-content {
+    padding: 1.2rem 0;
+}
+  .is-card-content-item {
     border: 1px solid rgba(127, 209, 216, 0.1);
     box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
     border-radius: 3.1vh;
-    padding-left: 15px;
+    padding: 0 0 70px 30px;
   }
 
-  .card-title {
+  .is-card-title-item {
     color: #7fd1d8;
     font-size: 25px;
     font-family: ALK Sanet;
-    padding-top: 1.8vh;
+    padding-top: 35px;
   }
-  .card-text {
+  .is-card-text-item {
     color: #c5cbcd;
     font-size: 2.2vh;
     font-family: Noto Sans;
-    margin-bottom: 0.8rem!important;
+    margin-bottom: 0.5rem!important;
     a {
       color: #c5cbcd;
       text-decoration: underline;
     }
-    &-top {
-      margin-top: 4vh;
-    }
   }
-  .contact {
-    &-img_1 {
-      margin-top: -3.5vh;
-      margin-right: 1.5vh;
-      img {
-        width: 59px;
-        height: 52px;
-      }
-    }
-    &-img_2 {
-      margin-top: 32vh;
-      margin-left: 1.5vh;
-      img {
-        width: 230px;
-        height: 191px;
-      }
-    }
-    &-box {
-      margin-top: 8vh;
-    }
-    &-content_item {
-      padding-left: 24vh;
-    }
-    &-header_box {
-      margin-top: 2vh;
-    }
+  .is-card-text-top {
+    margin-top: 20px;
   }
-  footer{
-    //ან რამდენითაცაა ჩამოწეული, ფუტერი აბსოლუტით არ გააკეთო ხოლმე
-    
+  
+  .contact-img_1{
     position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 11vh;
+    margin-top: -1rem;
+    margin-left: 0.5rem;
+    width: 59px;
+    height: 52px;
   }
-  .soc i {
-    color: #7fd1d8;
-    font-size: 30px;
-  }
-}
+ .contact-img_2 {
+    position: fixed;
+    margin-top: 15rem;
+    margin-left: 0;
+    width: 230px;
+    height: 191px;
+    }
+
+    .footer {
+      background-color: transparent;
+      padding: 0;
+    }
+    .is-soc-item {
+      display: flex;
+      justify-content: space-around;
+      margin: 10px auto;
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 6vh;
+    }
+    .is-soc-content {
+      margin: 0 7px;
+      i {
+        color: #7fd1d8;
+        font-size: 30px;
+      }
+    }
+//   .contact {
+//     &-img_1 {
+//       margin-top: -3.5vh;
+//       margin-right: 1.5vh;
+//       img {
+//         width: 59px;
+//         height: 52px;
+//       }
+//     }
+//     &-img_2 {
+//       margin-top: 32vh;
+//       margin-left: 1.5vh;
+//       img {
+//         width: 230px;
+//         height: 191px;
+//       }
+//     }
+//     &-box {
+//       margin-top: 8vh;
+//     }
+//     &-content_item {
+//       padding-left: 24vh;
+//     }
+//     &-header_box {
+//       margin-top: 2vh;
+//     }
+//   }
+//   footer{
+//     //ან რამდენითაცაა ჩამოწეული, ფუტერი აბსოლუტით არ გააკეთო ხოლმე
+    
+//     position: fixed;
+//     left: 0;
+//     right: 0;
+//     bottom: 11vh;
+//   }
+//   .soc i {
+//     color: #7fd1d8;
+//     font-size: 30px;
+//   }
+// }
