--- a/Scss/style.css
+++ b/Scss/style.css
@@ -5677,7 +5677,7 @@ button.dropdown-item.is-active {
 
 .navbar {
   background-color: white;
-  min-height: 3.25rem;
+  min-height: 6rem;
   position: relative;
   z-index: 30;
 }
@@ -6309,7 +6309,7 @@ button.dropdown-item.is-active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 3.25rem;
+  min-height: 6rem;
   width: 100%;
 }
 
@@ -6340,12 +6340,12 @@ button.dropdown-item.is-active {
 
 html.has-navbar-fixed-top,
 body.has-navbar-fixed-top {
-  padding-top: 3.25rem;
+  padding-top: 6rem;
 }
 
 html.has-navbar-fixed-bottom,
 body.has-navbar-fixed-bottom {
-  padding-bottom: 3.25rem;
+  padding-bottom: 6rem;
 }
 
 .navbar-brand,
@@ -6358,7 +6358,7 @@ body.has-navbar-fixed-bottom {
   display: flex;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  min-height: 3.25rem;
+  min-height: 6rem;
 }
 
 .navbar-brand a.navbar-item:focus, .navbar-brand a.navbar-item:hover {
@@ -6376,9 +6376,9 @@ body.has-navbar-fixed-bottom {
   color: #c5cbcd;
   cursor: pointer;
   display: block;
-  height: 3.25rem;
+  height: 6rem;
   position: relative;
-  width: 3.25rem;
+  width: 6rem;
   margin-left: auto;
 }
 
@@ -6490,7 +6490,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 
 .navbar-item.is-tab {
   border-bottom: 1px solid transparent;
-  min-height: 3.25rem;
+  min-height: 6rem;
   padding-bottom: calc(0.5rem - 1px);
 }
 
@@ -6588,16 +6588,16 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   }
   .navbar.is-fixed-top .navbar-menu, .navbar.is-fixed-top-touch .navbar-menu {
     -webkit-overflow-scrolling: touch;
-    max-height: calc(100vh - 3.25rem);
+    max-height: calc(100vh - 6rem);
     overflow: auto;
   }
   html.has-navbar-fixed-top-touch,
   body.has-navbar-fixed-top-touch {
-    padding-top: 3.25rem;
+    padding-top: 6rem;
   }
   html.has-navbar-fixed-bottom-touch,
   body.has-navbar-fixed-bottom-touch {
-    padding-bottom: 3.25rem;
+    padding-bottom: 6rem;
   }
 }
 
@@ -6614,7 +6614,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     display: flex;
   }
   .navbar {
-    min-height: 3.25rem;
+    min-height: 6rem;
   }
   .navbar.is-spaced {
     padding: 1rem 2rem;
@@ -6785,19 +6785,19 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   }
   html.has-navbar-fixed-top-desktop,
   body.has-navbar-fixed-top-desktop {
-    padding-top: 3.25rem;
+    padding-top: 6rem;
   }
   html.has-navbar-fixed-bottom-desktop,
   body.has-navbar-fixed-bottom-desktop {
-    padding-bottom: 3.25rem;
+    padding-bottom: 6rem;
   }
   html.has-spaced-navbar-fixed-top,
   body.has-spaced-navbar-fixed-top {
-    padding-top: 5.25rem;
+    padding-top: 8rem;
   }
   html.has-spaced-navbar-fixed-bottom,
   body.has-spaced-navbar-fixed-bottom {
-    padding-bottom: 5.25rem;
+    padding-bottom: 8rem;
   }
   a.navbar-item.is-active,
   .navbar-link.is-active {
@@ -6813,7 +6813,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .hero.is-fullheight-with-navbar {
-  min-height: calc(100vh - 3.25rem);
+  min-height: calc(100vh - 6rem);
 }
 
 .pagination {
@@ -12425,54 +12425,58 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   /* Legacy iOS */
 }
 
-#contact-app .header-logo img {
-  width: 54.98px;
-  height: 53.44px;
+.is-navbar {
+  margin: 0 10px;
 }
 
-#contact-app .user-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  border: 1px solid #f7cf43;
-  border-radius: 100%;
-  width: 40px;
-  height: 40px;
+.is-navbar-end {
+  margin: 0;
 }
 
-#contact-app .user-item i {
+.navbar-item img {
+  max-width: 54.98px;
+  max-height: 53.44px;
+}
+
+.button {
+  border-color: transparent;
+  -webkit-box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+          box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
   color: #f7cf43;
-  font-size: 31px;
+  padding-bottom: 0px;
+  padding-top: 24px;
 }
 
-#contact-app .nav-item {
-  position: relative;
+.button.is-rounded {
+  height: 48px;
+  width: 48px;
 }
 
-#contact-app .nav-item a {
-  color: #c5cbcd;
-  font-size: 16px;
-  font-family: ALK Sanet Regular;
+.button:active, .button.is-active {
+  border-color: transparent;
+  color: #f7cf43;
 }
 
-#contact-app .nav-link {
-  padding-right: 0rem !important;
-  padding-left: 0rem !important;
-  padding-bottom: 0 !important;
+.button:hover, .button.is-hovered {
+  border-color: transparent;
+  color: #f7cf43;
 }
 
-#contact-app .nav-item {
-  margin-right: 2.5rem;
-  margin-left: 2.5rem;
+.button:focus, .button.is-focused {
+  border-color: transparent;
+  color: #f7cf43;
 }
 
-#contact-app .nav-link.active:after {
+.button:focus:not(:active), .button.is-focused:not(:active) {
+  -webkit-box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+          box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+}
+
+.flaticon-user:before {
+  font-size: 28px;
+}
+
+.is-navbar_line.active:after {
   position: absolute;
   content: "";
   height: 2px;
@@ -12480,11 +12484,11 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   margin: 0 auto;
   left: 0;
   right: 0;
-  width: 100%;
+  width: 80%;
   background: #f7cf43;
 }
 
-#contact-app .nav-link:after {
+.is-navbar_line:after {
   position: absolute;
   content: "";
   height: 2px;
@@ -12498,92 +12502,99 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   transition: .5s;
 }
 
-#contact-app .nav-link.active {
-  color: #7fd1d8;
+.is-navbar_line.active {
+  color: #7fd1d8 !important;
 }
 
-#contact-app .nav-link:hover {
-  color: #7fd1d8;
+.is-navbar_line:hover {
+  color: #7fd1d8 !important;
+  background-color: inherit !important;
 }
 
-#contact-app .nav-link:hover:after {
-  width: 100%;
-  background: orange;
+.is-navbar_line:hover:after {
+  width: 80%;
+  background: #f7cf43;
 }
 
-#contact-app .card.card-item {
-  width: 76vh;
-  height: 53vh;
+.is-navbar_line {
+  padding: 0;
+  margin: 0.5rem 0.75rem;
+}
+
+.card-content {
+  padding: 1.2rem 0;
+}
+
+.is-card-content-item {
   border: 1px solid rgba(127, 209, 216, 0.1);
   -webkit-box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
           box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
   border-radius: 3.1vh;
-  padding-left: 15px;
+  padding: 0 0 70px 30px;
 }
 
-#contact-app .card-title {
+.is-card-title-item {
   color: #7fd1d8;
   font-size: 25px;
   font-family: ALK Sanet;
-  padding-top: 1.8vh;
+  padding-top: 35px;
 }
 
-#contact-app .card-text {
+.is-card-text-item {
   color: #c5cbcd;
   font-size: 2.2vh;
   font-family: Noto Sans;
-  margin-bottom: 0.8rem !important;
+  margin-bottom: 0.5rem !important;
 }
 
-#contact-app .card-text a {
+.is-card-text-item a {
   color: #c5cbcd;
   text-decoration: underline;
 }
 
-#contact-app .card-text-top {
-  margin-top: 4vh;
+.is-card-text-top {
+  margin-top: 20px;
 }
 
-#contact-app .contact-img_1 {
-  margin-top: -3.5vh;
-  margin-right: 1.5vh;
-}
-
-#contact-app .contact-img_1 img {
+.contact-img_1 {
+  position: fixed;
+  margin-top: -1rem;
+  margin-left: 0.5rem;
   width: 59px;
   height: 52px;
 }
 
-#contact-app .contact-img_2 {
-  margin-top: 32vh;
-  margin-left: 1.5vh;
-}
-
-#contact-app .contact-img_2 img {
+.contact-img_2 {
+  position: fixed;
+  margin-top: 15rem;
+  margin-left: 0;
   width: 230px;
   height: 191px;
 }
 
-#contact-app .contact-box {
-  margin-top: 8vh;
+.footer {
+  background-color: transparent;
+  padding: 0;
 }
 
-#contact-app .contact-content_item {
-  padding-left: 24vh;
-}
-
-#contact-app .contact-header_box {
-  margin-top: 2vh;
-}
-
-#contact-app footer {
+.is-soc-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 10px auto;
   position: fixed;
   left: 0;
   right: 0;
-  bottom: 11vh;
+  bottom: 6vh;
 }
 
-#contact-app .soc i {
+.is-soc-content {
+  margin: 0 7px;
+}
+
+.is-soc-content i {
   color: #7fd1d8;
   font-size: 30px;
 }
