--- a/Scss/style.css
+++ b/Scss/style.css
@@ -12425,17 +12425,17 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   /* Legacy iOS */
 }
 
-.is-navbar {
-  margin: 0 10px;
+.navbar-item img {
+  max-width: 54.98px;
+  max-height: 53.44px;
 }
 
 .is-navbar-end {
   margin: 0;
 }
 
-.navbar-item img {
-  max-width: 54.98px;
-  max-height: 53.44px;
+.is-menu-center {
+  margin: auto;
 }
 
 .button {
@@ -12518,7 +12518,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 
 .is-navbar_line {
   padding: 0;
-  margin: 0.5rem 0.75rem;
+  margin: 0.5rem 1.5rem;
 }
 
 .card-content {
@@ -12619,14 +12619,14 @@ body {
   height: 53px;
 }
 
-.navbar-item {
+.is-about-item {
   margin-left: 30px;
   padding-right: 0rem !important;
   padding-left: 0rem !important;
   padding-bottom: 0 !important;
 }
 
-.navbar-item .active:after {
+.is-about-item.active:after {
   position: absolute;
   content: "";
   height: 2px;
@@ -12638,7 +12638,7 @@ body {
   background: #f7cf43;
 }
 
-.navbar-item:after {
+.is-about-item:after {
   position: absolute;
   content: "";
   height: 2px;
@@ -12652,15 +12652,15 @@ body {
   transition: .5s;
 }
 
-.navbar-item .active {
+.is-about-item.active {
   color: #7fd1d8;
 }
 
-.navbar-item:hover {
+.is-about-item:hover {
   color: #7fd1d8;
 }
 
-.navbar-item:hover:after {
+.is-about-item:hover:after {
   width: 100%;
   background: orange;
 }
