--- a/Scss/_about-project.scss
+++ b/Scss/_about-project.scss
@@ -10,63 +10,61 @@ body{
 }
 
 .header{
-  margin-top:3vh;
+  margin-top:2vh;
 }
 
 .logo {
   img {
     width: 54px;
     height: 53px;
+    margin-top: 3vh;
   }
 }
-.navbar-item {
-  margin-left: 30px;
-  padding-right: 0rem !important;
-  padding-left: 0rem !important;
-  padding-bottom: 0 !important;
+
+.is-navbar_line.active:after {
+  position: absolute;
+  content: "";
+  height: 2px;
+  bottom: -8px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  width: 80%;
+  background: #f7cf43;
+}
+.is-navbar_line:after {
+  position: absolute;
+  content: "";
+  height: 2px;
+  bottom: -8px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  width: 0%;
+  background: #f7cf43;
+  transition:.5s;
+}
+.is-navbar_line.active {
+  color: #7fd1d8!important;
+}
+.is-navbar_line:hover {
+  color: #7fd1d8!important;
+  background-color: inherit!important;
 }
 
-.navbar-item .active:after {
-    position: absolute;
-    content: "";
-    height: 2px;
-    bottom: -8px;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    width: 100%;
-    background: $warning;
-  }
-
-  .navbar-item:after {
-    position: absolute;
-    content: "";
-    height: 2px;
-    bottom: -8px;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    width: 0%;
-    background: $warning;
-    transition:.5s;
-  }
-  .navbar-item .active {
-        color: $primary;
-      }
-  .navbar-item:hover {
-        color: $primary;
-      }
-  .navbar-item:hover:after {
-        width: 100%;
-        background: orange;
-  }
-
+.is-navbar_line:hover:after {
+  width: 80%;
+  background:#f7cf43;
+}
+.is-navbar_line{
+  padding: 0;
+  margin: 0.5rem 2rem;
+}
 .is-user {
   border-radius: 100%;
   height: 40px;
   width: 40px;
   position: relative;
-  border: 1px solid $warning;
 
   i {
     color: $warning;
@@ -79,12 +77,12 @@ body{
 }
 
 .card-container{
-  margin-top:8vh;
+  margin-top:5vh;
 }
 
 .is-card {
   border: 1px solid rgba(123, 168, 172, 0.2);
-  box-shadow: 2px 2px 8px $primary;
+  box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
   border-radius: 3.1vh;
 }
 
@@ -93,13 +91,20 @@ body{
   font-size: 25px;
   padding-top: 20px;
 }
+.title{
+  font-weight:300;
+}
+
+.card-content{
+  margin-left:2rem;
+}
 .is-card-text {
   color:$text;
   font-size: 2.2vh;
   padding-top: 10px;
   padding-bottom: 100px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 .is-soc {
