--- a/Scss/_contact.scss
+++ b/Scss/_contact.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: ALK Sanet;
+  src: url(alk-sanet-webfont.woff);
+}
+@font-face {
+  font-family: Noto Sans;
+  src: url(NotoSans-Regular.woff);
+}
 .navbar-item {
   img {
     max-width: 54.98px;
