--- a/Scss/style.css
+++ b/Scss/style.css
@@ -12426,8 +12426,13 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 
 @font-face {
-  font-family: alkSanet;
+  font-family: ALK Sanet;
   src: url(alk-sanet-webfont.woff);
+}
+
+@font-face {
+  font-family: Noto Sans;
+  src: url(NotoSans-Regular.woff);
 }
 
 .navbar-item img {
