--- a/Scss/_contact.scss
+++ b/Scss/_contact.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: ALKSanet;
-  src: url(alk-sanet-webfont.woff);
+  src: url('/fonts/alk-sanet-webfont.woff');
 }
 @font-face {
   font-family: NotoSans;
-  src: url(NotoSans-Regular.woff);
+  src: url('/fonts/NotoSans-Regular.woff');
 }
 .navbar-item {
   img {
