--- a/Scss/_responsive.scss
+++ b/Scss/_responsive.scss
@@ -1,9 +1,26 @@
 @media screen and (min-width: 1024px){  
+    //*   contact responsive  start   *//
     .navbar-brand {
       width: inherit!important;
     }
-  }
-@media screen and (max-width: 1023px){  
+    //*   contact responsive  end   *//
+}
+@media screen and (max-width: 1215px){
+    //**   about-project responsive  start   **//
+    .ladybird {
+      margin-top: 0;
+      margin-left: 5.5rem;
+    }
+    .is-fly {
+      margin-left: -4.5rem;
+      margin-top: 29.4rem;
+      height: 150px;
+      width: 190px;
+    }
+    //**   about-project responsive  end   **//
+}
+@media screen and (max-width: 1023px){ 
+//*   contact responsive  start   *//
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -86,8 +103,35 @@
     width: 180px;
     height: 145px;
   }
+  //*   contact responsive  end  *//
+  
+  //**   about-project responsive  start   **//
+  .column.is-9, .column.is-9-tablet {
+    width: 83%;
+  }
+  .card-container{
+    margin-top: 2.5vh;
+  }
+  .ladybird {
+    margin-top: 0;
+    margin-left: 5.5rem;
+  } 
+  .is-fly {
+    display: none;
+  }
+  .card-content-1{
+    padding: 1rem 0;
+  }
+  .is-card-text {
+    padding-top: 0;
+    padding-bottom: 70px;
+    padding-right: 30px;
+    padding-left: 30px;
+}
+  //**   about-project responsive  end   **//
 }
 @media screen and (max-width: 768px){ 
+  //*   contact responsive  start   *//
   .column.is-half, .column.is-half-tablet {
     flex: none;
     width: 62%;
@@ -129,4 +173,62 @@
     right: 12vh!important;
     bottom: 5vh!important;
   }
+  //*   contact responsive  end   *//
+
+  //**   about-project responsive  start   **//
+  .ladybird {
+    top: 8.5rem;
+    left: 2.2rem;
+    z-index: 29;
+  }
+  .card-container{
+    margin-top: 5vh;
+  }
+  .column.is-9, .column.is-9-tablet {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0 0 0 10px;
+  }
+  .is-card {
+    width: 92%;
+    margin: 0 auto;
+    padding: 0 25px 60px 25px;
+  }
+  .card-content-1 {
+    padding-left: 0;
+    margin-left: 0;
+  }
+  .is-card-text {
+    padding: 0;
+  }
+  .text {  
+    padding: 0;
+    // border: 1px solid #fd9aa4; 
+    text-align: justify;
+    }
+    .text-scroll { 
+      overflow: auto;
+      margin: 0 auto;
+      height: 22rem; 
+      padding: 0 10px 0 0; 
+  }
+    
+    .text-scroll::-webkit-scrollbar {
+      width: 2px; 
+  }
+    .text-scroll::-webkit-scrollbar-thumb {
+      background-color: #7fd1d8;; 
+  }
+    .text-scroll::-webkit-scrollbar-track {
+      background-color: none; 
+  }
+  
+  //**   about-project responsive  end   **//
+}
+
+@media screen and (max-width: 768px){ 
+  //**   about-project responsive  start  **//
+
+   
+  //**   about-project responsive  end   **//
 }
