--- a/Scss/style.css
+++ b/Scss/style.css
@@ -12751,16 +12751,17 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   position: fixed;
   width: 30px;
   height: 25px;
-  top: 17vh;
-  left: 40vh;
+  margin-top: 0;
+  margin-left: 6rem;
+  z-index: 30;
 }
 
 .is-fly {
   position: fixed;
-  right: 10vh;
-  bottom: 3vh;
-  height: 180px;
-  width: 230px;
+  margin-left: -4.5rem;
+  margin-top: 27.5rem;
+  height: 170px;
+  width: 220px;
 }
 
 .footer {
@@ -12843,6 +12844,19 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 @media screen and (min-width: 1024px) {
   .navbar-brand {
     width: inherit !important;
+  }
+}
+
+@media screen and (max-width: 1215px) {
+  .ladybird {
+    margin-top: 0;
+    margin-left: 5.5rem;
+  }
+  .is-fly {
+    margin-left: -4.5rem;
+    margin-top: 29.4rem;
+    height: 150px;
+    width: 190px;
   }
 }
 
@@ -12948,6 +12962,28 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     width: 180px;
     height: 145px;
   }
+  .column.is-9, .column.is-9-tablet {
+    width: 83%;
+  }
+  .card-container {
+    margin-top: 2.5vh;
+  }
+  .ladybird {
+    margin-top: 0;
+    margin-left: 5.5rem;
+  }
+  .is-fly {
+    display: none;
+  }
+  .card-content-1 {
+    padding: 1rem 0;
+  }
+  .is-card-text {
+    padding-top: 0;
+    padding-bottom: 70px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -12991,6 +13027,50 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     left: 12vh !important;
     right: 12vh !important;
     bottom: 5vh !important;
+  }
+  .ladybird {
+    top: 8.5rem;
+    left: 2.2rem;
+    z-index: 29;
+  }
+  .card-container {
+    margin-top: 5vh;
+  }
+  .column.is-9, .column.is-9-tablet {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0 0 0 10px;
+  }
+  .is-card {
+    width: 92%;
+    margin: 0 auto;
+    padding: 0 25px 60px 25px;
+  }
+  .card-content-1 {
+    padding-left: 0;
+    margin-left: 0;
+  }
+  .is-card-text {
+    padding: 0;
+  }
+  .text {
+    padding: 0;
+    text-align: justify;
+  }
+  .text-scroll {
+    overflow: auto;
+    margin: 0 auto;
+    height: 22rem;
+    padding: 0 10px 0 0;
+  }
+  .text-scroll::-webkit-scrollbar {
+    width: 2px;
+  }
+  .text-scroll::-webkit-scrollbar-thumb {
+    background-color: #7fd1d8;
+  }
+  .text-scroll::-webkit-scrollbar-track {
+    background-color: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
