--- a/Scss/_auth.scss
+++ b/Scss/_auth.scss
@@ -1,7 +1,19 @@
 .auth {
   min-height: calc(100vh - 15.5rem);
-
-  .input::placeholder {
-    font-family: "HelveticaNeue";
+  &_image-box-1 {
+    left: -60px;
+    top: 10px;
+  }
+  &_image-box-2 {
+    right: -256px;
+    bottom: -150px;
+  }
+  .field {
+    .input::placeholder {
+      font-family: "HelveticaNeue";
+    }
+    p {
+      font-size: 10px;
+    }
   }
 }
