--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -38,6 +38,8 @@ $footer-padding: 3rem 1.5rem 5.3rem;
 @import "./error";
 //@import "./responsive";
 
+@import "./main-page";
+
 // main classes
 .ml-a {
   margin-left: auto;
